--- a/configs/model_config.yaml
+++ b/configs/model_config.yaml
@@ -17,4 +17,4 @@ resblock_updown: True
 use_fp16: False
 use_new_attention_order: False
 
-model_path: models/cmoct_4999_.pt
+model_path: models/fundus.pt
